--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -69,6 +69,9 @@
         android:focusable="true"
         app:layout_constraintTop_toBottomOf="@+id/user_image">
 
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/menu_edit_profile"
             android:layout_width="wrap_content"
@@ -87,6 +90,7 @@
             android:layout_marginEnd="35dp"
             app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />
 
+
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
@@ -97,6 +101,10 @@
         android:focusable="true"
         app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
         tools:layout_editor_absoluteX="-16dp">
+
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/menu_about_us"
@@ -125,6 +133,9 @@
         android:focusable="true"
         app:layout_constraintTop_toBottomOf="@+id/materialCardView3"
         tools:layout_editor_absoluteX="-16dp">
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/menu_log_out"
@@ -143,7 +154,9 @@
             android:layout_marginVertical="20dp"
             android:layout_marginEnd="35dp"
             app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />
-
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </com.google.android.material.card.MaterialCardView>
 
 
