--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#EBEBEB</color>
     <color name="dark_green">#008060</color>
     <color name="second_green">#67E7AA</color>
     <color name="thrid_green">#174F3E</color>
