--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -61,7 +61,7 @@
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView2"
+        android:id="@+id/menu_edit_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
@@ -73,7 +73,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
-            android:id="@+id/menu_edit_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
@@ -94,12 +93,12 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView3"
+        android:id="@+id/menu_about_us"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
-        app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
+        app:layout_constraintTop_toBottomOf="@+id/menu_edit_profile"
         tools:layout_editor_absoluteX="-16dp">
 
         <com.google.android.material.divider.MaterialDivider
@@ -107,7 +106,6 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/menu_about_us"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
@@ -132,7 +130,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
-        app:layout_constraintTop_toBottomOf="@+id/materialCardView3"
+        app:layout_constraintTop_toBottomOf="@+id/menu_about_us"
         tools:layout_editor_absoluteX="-16dp">
         <com.google.android.material.divider.MaterialDivider
             android:layout_width="match_parent"
